refactor: major architecture overhaul to hexagonal ports & adapters